<resources>

    <string name="app_name">说故事</string>
    <string name="friends">朋友</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>

    <string name="home_story">故事</string>
    <string name="home_publish">发布</string>
    <string name="home_friends">朋友</string>
    <string name="home_my">我的</string>

    <string name="story_new">最新</string>
    <string name="story_hot">最热</string>

    <string name="talk_story">讲故事</string>
    <string name="next">下一步</string>
    <string name="publish">发布</string>
    <string name="publish_record">录音</string>
    <string name="publish_speech">语音</string>
    <string name="publish_text">文字</string>

    <string name="record">录音</string>
    <string name="pause">暂停</string>
    <string name="continue_record">接着录</string>

    <string name="repeat_record">重录</string>
    <string name="audition">试听</string>
    <string name="save">保存</string>

    <string name="press_speak">按住 说话</string>

    <string name="have_story_to_talk">我有故事\n我要讲</string>

    <string name="toast_please_input_story_title">请输入故事的标题</string>
    <string name="toast_speech_time_short">时间太短</string>

    <string name="hint_please_enter_title">请输入标题</string>
    <string name="title_activity_my">MyActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">UserMessageActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_fav">FavActivity</string>
    <string name="title_activity_publish">PublishActivity</string>
    <string name="title_activity_cover">CoverActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_joke_detail">JokeDetailActivity</string>

</resources>
