<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical">

    <com.lab.joke.view.custom.TitleView xmlns:story="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item"
        story:functionText="@string/next"
        story:titleText="@string/talk_story" />

    <EditText
        android:id="@+id/et_story_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item"
        android:layout_margin="8dp"
        android:background="@null"
        android:hint="@string/hint_please_enter_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/ll_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_record"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_big" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_speech"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_speech"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_big" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish_text"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/font_big" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>